--- a/spa-home/src/app/app.component.html
+++ b/spa-home/src/app/app.component.html
@@ -1,2 +1,18 @@
-<h1>Angular</h1>
-<my-btn></my-btn>
+<h1>Home</h1>
+
+<div class="container">
+    <img src="https://www.pngplay.com/wp-content/uploads/8/Oscar-Academy-Awards-PNG-Images-HD.png" alt="Óscar">
+    <div class="container2">
+
+        <text-box text="¡Bienvenido a nuestra página web de películas!
+        Aquí podrás explorar un mundo lleno de emocionantes historias, personajes inolvidables y momentos inolvidables del cine. Sumérgete en un océano de géneros, desde acción y aventuras hasta dramas conmovedores, comedias llenas de risas y mucho más. 
+        Nuestro objetivo es brindarte la mejor experiencia cinematográfica posible. Podrás descubrir recomendaciones, leer reseñas, ver tráilers y mantenerse actualizado con las últimas noticias del mundo del cine."></text-box>
+
+        <text-box text="Ya sea que estés buscando una película para disfrutar en familia, pasar una tarde de emociones intensas o simplemente relajarte con una comedia ligera, estamos aquí para ayudarte a encontrar la película perfecta para cada ocasión.
+        Explora nuestra amplia selección de películas, crea tu lista de favoritos y comparte tus opiniones con nuestra comunidad cinéfila. ¡Sumérgete en la magia del cine y disfruta de cada momento en nuestra página web de películas!
+        ¡Gracias por visitarnos y que disfrutes de tu viaje cinematográfico!"></text-box>
+
+    </div>
+
+   
+</div>
