--- a/stencil-library/src/components/text-box/text-box.css
+++ b/stencil-library/src/components/text-box/text-box.css
@@ -1,3 +1,23 @@
 :host {
   display: block;
 }
+
+.caja {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  max-width: 100%;
+  max-height: 100%;
+  background-color: #fff;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  transition: transform 0.3s, box-shadow 0.3s;
+  padding: 20px;
+  box-sizing: border-box;
+}
+
+
+.texto {
+  font-size: 24px;
+  transition: font-size 0.3s;
+}
+
