--- a/stencil-library/src/components/my-btn/my-btn.css
+++ b/stencil-library/src/components/my-btn/my-btn.css
@@ -1,9 +1,11 @@
-@import '../../../../tokens/variables.css';
+
 
 :host {
   display: block;
+  font-family: "Poppins", sans-serif;
 }
 
-button {
-  background-color: var(--global-red);
+button{
+  border-radius: 5px;
+  padding: 5px 10px;
 }
