--- a/stencil-library/src/components/my-link/my-link.css
+++ b/stencil-library/src/components/my-link/my-link.css
@@ -1,13 +1,12 @@
 :host {
   display: block;
+  font-family: "Poppins", sans-serif;
 }
 
 
 a {
   display: inline-block;
-  padding: 10px 20px;
-  background-color: #2196f3;
-  color: #fff;
+  color: #4c00ff;
   text-decoration: none;
   border-radius: 4px;
   transition: background-color 0.3s;
@@ -15,4 +14,5 @@ a {
 
 a:hover {
   background-color: #0d8af1;
+
 }
