--- a/stencil-library/src/components/my-link/my-link.css
+++ b/stencil-library/src/components/my-link/my-link.css
@@ -8,11 +8,10 @@ a {
   display: inline-block;
   color: #4c00ff;
   text-decoration: none;
-  border-radius: 4px;
+  border-radius: var(--border-radius-btn);
   transition: background-color 0.3s;
 }
 
 a:hover {
   background-color: #0d8af1;
-
 }
