--- a/stencil-library/src/components/nav-app/nav-app.css
+++ b/stencil-library/src/components/nav-app/nav-app.css
@@ -6,19 +6,17 @@
   font-family: "Poppins", sans-serif;
 }
 
-
 .sidebar {
   position: fixed;
   top: 0;
   left: 0;
   height: 100%;
   width: 240px;
-  background: #11101d;
+  border: 1px solid black;
   padding: 6px 14px;
+  background-color: var(--background-color-nav);
   border-radius: 0  10px  10px 0px;
 }
-
-
 
 .sidebar .logo_content .logo {
   color: #fff;
@@ -37,75 +35,15 @@
   font-weight: 400;
 }
 
-.sidebar #btn {
-  position: absolute;
-  color: #fff;
-  left: 90%;
-  top: 6px;
-  font-size: 20px;
-  height: 50px;
-  width: 50px;
-  text-align: center;
-  line-height: 50px;
-  transform: translateX(-50px);
-}
-
 .sidebar ul {
-  margin-top: 20px;
+  margin-top: 30px;
 }
 
-.sidebar ul li {
-  position: relative;
-  height: 50px;
-  width: 100%;
-  margin: 0 5px;
-  list-style: none;
-  line-height: 50px;
-}
-
-
-
-
-.sidebar ul li a {
-  color: #fff;
-  display: flex;
-  align-items: center;
-  text-decoration: none;
-  transition: all 0 0.4s ease;
-  border-radius: 12px;
-}
-
-.sidebar ul li a:hover {
-  color: rgb(76, 76, 233);
-  background-color: #ffffff;
-}
-
-.sidebar ul li a i {
-  height: 50px;
-  min-width: 30px;
-  border-radius: 12px;
-  line-height: 50px;
-}
-
-
-nav div button{
-  margin-left: 10px;
-  padding: 7px;
-  background-color: #fff;
-  border-radius: 6px;
-}
-
-nav div button:hover{
-  color:  blue;
-}
-
-nav div button:active{
-  background-color: blue;
-  color: #fff;
-}
 
 .container-btn {
+  display: flex;
   position: absolute;
   bottom: 0;
   margin-bottom: 40px;
+  margin-left: 80px;
 }
