--- a/spa-web/src/app/angular-info/angular-info.component.html
+++ b/spa-web/src/app/angular-info/angular-info.component.html
@@ -1,16 +1,20 @@
 <h2>Angular</h2>
 
-<p>
-  La combinación de Angular con Single-spa permite desarrollar microfrontends
-  usando Angular como el framework principal para cada módulo. Cada
-  microfrontend Angular puede ser desarrollado de manera independiente por
-  equipos separados, lo que facilita la colaboración y la escalabilidad en
-  proyectos grandes.
-</p>
+<p translate>angular.text_init</p>
 
 <pre> 
     <code [highlight]="code_create_angular_microfrontend" [languages]="['bash']"  linenumbers="true"></code> 
   </pre>
 
+<p translate>angular.text_config_main</p>
 
-  <img src="http://localhost:9002/assets/main.png" alt="main.single-spa.ts">
+<img
+  src="http://localhost:9002/assets/images/main.png"
+  alt="main.single-spa.ts"
+/>
+
+<p translate>angular.text_route</p>
+<img
+  src="http://localhost:9002/assets/images/app-routing.png"
+  alt="main.single-spa.ts"
+/>
