--- a/spa-web/src/app/app.component.html
+++ b/spa-web/src/app/app.component.html
@@ -1,29 +1,16 @@
 <div class="container">
-  <h1>Desarrollo De la Web</h1>
-  <h2>Primeros pasos</h2>
+  <h1 translate>tittle</h1>
+  <h2 translate> first</h2>
 
-  <p>
-    ¿Qué es el enfoque de microfrontends y Single-spa? En lugar de construir una
-    aplicación monolítica, donde todos los componentes están fuertemente
-    acoplados, adoptamos un enfoque modular al dividir nuestra aplicación en
-    múltiples microfrontends independientes. Cada microfrontend es responsable
-    de una parte específica de la aplicación y se desarrolla, prueba y despliega
-    de manera independiente. Esto nos permite aprovechar las ventajas de
-    diferentes tecnologías y equipos, promoviendo la colaboración y la
-    eficiencia.
-  </p>
+  <p translate> start_text</p>
 
-  <p>
-    Single-spa es una biblioteca JavaScript que nos ayuda a integrar y coordinar
-    estos microfrontends en una única aplicación. Actúa como un orquestador,
-    permitiéndonos cargar y descargar dinámicamente los módulos según sea
-    necesario, lo que optimiza el rendimiento y mejora la experiencia del
-    usuario.
-  </p>
+  <p translate>next_text</p>
 
   <app-stencil></app-stencil>
   <app-single-spa></app-single-spa>
+  <root-app></root-app>
   <app-react></app-react>
   <app-angular-info></app-angular-info>
   <app-vue></app-vue>
+ 
 </div>
