--- a/spa-web/src/app/stencil/stencil.component.html
+++ b/spa-web/src/app/stencil/stencil.component.html
@@ -1,59 +1,40 @@
 <h2>Stencil js</h2>
 
-<p>
-  Stencil JS es un framework de desarrollo web de código abierto creado por el
-  equipo de Ionic. Su objetivo principal es facilitar la creación de
-  componentes web reutilizables y de alto rendimiento. Stencil JS se encuentra
-  enfocado en desarrollar aplicaciones web y componentes web utilizando las
-  últimas características y estándares de la web moderna.
-</p>
-<h3>Instalación y creación de un proyecto</h3>
+<p translate>stencil.init_text</p>
+<h3 translate>stencil.tittle_isntall_stencil</h3>
 <ul>
-  <li>
-    Asegúrate de tener Node.js instalado en tu computadora. Puedes descargar
-    Node.js desde el sitio web oficial:
-    <a href="https://nodejs.org/" target="_blank">Node</a>
+  <li translate>
+    stencil.li_first_step
+    <my-link text="Node" link="https://nodejs.org/"></my-link>
   </li>
-  <li>Abre una terminal o línea de comandos en tu ordenador.</li>
-  <li>
-    Instala el CLI de Stencil JS de forma global ejecutando el siguiente
-    comando:
-  </li>
+  <li translate>stencil.li_second_step</li>
+  <li translate>stencil.li_third_step</li>
 </ul>
 
 <pre> 
   <code [highlight]="code_npm_stencil_global" [languages]="['bash']"  linenumbers="true"></code> 
 </pre>
 
-<p>
-  Una vez que hayas instalado el CLI de Stencil.js, puedes crear un nuevo
-  proyecto ejecutando el siguiente comando:
-</p>
+<p translate>stencil.text_create_proyect</p>
 <pre> 
   <code [highlight]="code_npm_create_proyect_stencil" [languages]="['bash']"  linenumbers="true"></code> 
 </pre>
 
-<p>Para crear nuevos componentes web puedes ejecutar el siguiente comando:</p>
+<p translate>stencil.text_create_webcomponent</p>
 
 <pre> 
   <code [highlight]="code_create_web_component" [languages]="['bash']"  linenumbers="true"></code> 
 </pre>
 
-<p>Para ejecutar el proyecto Stencil js ejecute en la consola:</p>
+<p translate>stencil.text_ejecute_stencil</p>
 
 <pre> 
   <code [highlight]="code_stencil_start" [languages]="['bash']"  linenumbers="true"></code> 
 </pre>
 
-<p>
-  Una vez se tengan todos los componentes web desarrollados, solo faltaría
-  publicarlos en npm para poder utilizarlos en otras tecnologías web cómo
-  Angular, React o Vue.
-</p>
+<p translate>stencil.text_public_npm</p>
 
-<p>
- Para publicarlos hay que registrarse en la página oficial de <a href="https://www.npmjs.com/" target="_blank">NPM</a>  y una vez registrado ejecutar los siguientes comandos:
-</p>
+<p translate>stencil.text_public_code_npm</p>
 
 <pre> 
   <code [highlight]="code_npm_login" [languages]="['bash']"  linenumbers="true"></code> 
