--- a/spa-web/src/app/vue-info/vue.component.html
+++ b/spa-web/src/app/vue-info/vue.component.html
@@ -1,5 +1,30 @@
 <h2>VUE</h2>
 
+<p translate>
+  vue.text_init
+</p>
+
 <pre> 
     <code [highlight]="code_create_vue_microfrontend" [languages]="['bash']"  linenumbers="true"></code> 
-  </pre>
+</pre>
+
+<p translate>
+  vue.text_edit_config
+</p>
+
+<pre> 
+  <code [highlight]="code_config_webpack" [languages]="['bash']"  linenumbers="true"></code> 
+</pre>
+
+<p translate>
+  vue.text_finish_edit
+</p>
+
+<p translate>
+ vue.text_ejecute_proyect
+</p>
+
+<pre> 
+  <code [highlight]="code_ejecute_vue_app" [languages]="['bash']"  linenumbers="true"></code> 
+</pre>
+
