--- a/stencil-library/src/global/global.css
+++ b/stencil-library/src/global/global.css
@@ -4,11 +4,14 @@
 :root{
     --btn-color-languaje: var(--general-nav-btn-color);
     --btn-color-btn-nav: var(--general-nav-btn-color);
+    --logo-color: var(--general-nav-logo-color);
     --border-radius-btn: var(--general-nav-btn-border-radius);
     --icon-house: var( --general-icon-ui-house);
     --background-color-nav: var(--general-nav-menu-color);
     --hover-color-text-a: var(--general-nav-btn-hover);
     --hover-color-background-a: var(--general-nav-hover-a);
     --text-color-nav: var(--general-nav-text-color);
+    --text-color-link: var( --general-general-color-link);
+    --text-color-hover-link:var(--general-general-color-hover-link)
 }
 
