--- a/spa-web/src/app/single-spa/single-spa.component.html
+++ b/spa-web/src/app/single-spa/single-spa.component.html
@@ -1,22 +1,15 @@
 <h2>Single-SPA Microfrontend</h2>
 
-<p>
-  Single-spa es una biblioteca de JavaScript que permite crear aplicaciones web
-  de una sola página (SPA) a partir de múltiples aplicaciones independientes o
-  microfrontends. La idea central de Single-spa es que cada microfrontend puede
-  estar desarrollado con un marco o tecnología diferente, como Angular, React,
-  Vue.js o cualquier otra de tu elección.
-</p>
+<p translate>single_spa.init_text</p>
 
 <pre> 
     <code [highlight]="code_installl_single_spa" [languages]="['bash']"></code> 
   </pre>
 
-<p>
-  Para crear un proyecto root, debes ejecutar este comando y seguir las opciones
-  que te van mostrando.
-</p>
+<p translate>single_spa.text_create_root</p>
 
 <pre> 
     <code [highlight]="code_create_single_spa" [languages]="['bash']"></code> 
   </pre>
+
+<p translate>single_spa.text_finish</p>
