--- a/spa-home/src/app/app.component.html
+++ b/spa-home/src/app/app.component.html
@@ -9,14 +9,7 @@
     <br />
 
     <text-box
-      text=" ¿Te has preguntado cómo diferentes aplicaciones independientes pueden unirse
-        para formar un sitio coherente y colaborativo? Bueno, eso es exactamente lo
-        que hemos logrado aquí. Nuestro enfoque en microfrontends nos permite
-        desarrollar, desplegar y mantener cada parte de la aplicación de forma
-        independiente, lo que nos proporciona una mayor flexibilidad y facilidad de
-        desarrollo. Cada microfrontend es una pequeña aplicación independiente
-        que puede ser escrita en diferentes frameworks o tecnologías, y sin embargo,
-        todas trabajan juntas sin problemas en este sitio web."
+      text={{getTranslatedText()}}
     ></text-box>
 
     <p translate>
