--- a/spa-home/src/app/app.component.scss
+++ b/spa-home/src/app/app.component.scss
@@ -5,6 +5,7 @@
   justify-content: center;
   margin-bottom: 20px;
   font-size: $general-general-h1-size;
+  font-family: $general-general-text-font;
 }
 .container {
   margin-top: 40px;
@@ -17,9 +18,11 @@
   margin-bottom: 30px;
   font-size: $general-general-text-size;
   text-align: justify;
+  font-family: $general-general-text-font;
 }
 
 p {
   font-size:$general-general-text-size;
   text-align: justify;
+  font-family: $general-general-text-font;
 }
