--- a/tokens/variables.scss
+++ b/tokens/variables.scss
@@ -1,6 +1,6 @@
 
 // Do not edit directly
-// Generated on Mon, 04 Sep 2023 06:20:38 GMT
+// Generated on Wed, 06 Sep 2023 11:38:30 GMT
 
 $general-nav-logo-color: #fff;
 $general-nav-menu-color: #11101d;
@@ -13,7 +13,7 @@ $general-nav-btn-border-radius: 5px;
 $general-nav-btn-border-stroke: [object Object];
 $general-general-background-app: #dcdada;
 $general-general-text-color: #000;
-$general-general-text-font: Poppins;
+$general-general-text-font: sans-serif;
 $general-general-h1-size: 45px;
 $general-general-h2-size: 32px;
 $general-general-h3-size: 24px;
