change build borders

--- a/tokens/colors/variables-dark-colors.scss
+++ b/tokens/colors/variables-dark-colors.scss
@@ -1,16 +1,10 @@
-/**
- * Do not edit directly
- * Generated on Mon, 11 Sep 2023 09:13:58 GMT
- */
-
-:root {
-  --dark-mode-nav-logo-color-dark: #fff;
-  --dark-mode-nav-menu-color-dark: #555555;
-  --dark-mode-nav-text-color-dark: #fff;
-  --dark-mode-nav-btn-hover-dark: #003fae;
-  --dark-mode-nav-hover-a-dark: #fff;
-  --dark-mode-nav-btn-color-dark: #003fae;
-  --dark-mode-general-background-app-dark: #050505;
-  --dark-mode-general-text-color-dark: #fff;
-  --dark-mode-general-btn-color-dark: #000;
-}
+:root{
+--nav-logo-color:#fff;
+--nav-menu-color:#555555;
+--nav-text-color:#fff;
+--nav-btn-hover:#003fae;
+--nav-hover-a:#fff;
+--nav-btn-color:#003fae;
+--general-background-app:#050505;
+--general-text-color:#fff;
+--general-btn-color:#000;}
