--- a/tokens/colors/variables-general-colors.scss
+++ b/tokens/colors/variables-general-colors.scss
@@ -1,19 +1,13 @@
-/**
- * Do not edit directly
- * Generated on Mon, 11 Sep 2023 09:13:58 GMT
- */
-
-:root {
-  --general-nav-logo-color: #fff;
-  --general-nav-menu-color: #11101d;
-  --general-nav-text-color: #fff;
-  --general-nav-btn-hover: #4c4ce9;
-  --general-nav-hover-a: #fff;
-  --general-nav-btn-color: #D0E2ED;
-  --general-general-background-app: #dcdada;
-  --general-general-text-color: #000;
-  --general-general-btn-color: #11101d;
-  --general-general-color-code: #2d2b57;
-  --general-general-color-link: #4c00ff;
-  --general-general-color-hover-link: #0d8af1;
-}
+:root{
+--nav-logo-color:#fff;
+--nav-menu-color:#11101d;
+--nav-text-color:#fff;
+--nav-btn-hover:#4c4ce9;
+--nav-hover-a:#fff;
+--nav-btn-color:#D0E2ED;
+--general-background-app:#dcdada;
+--general-text-color:#000;
+--general-btn-color:#11101d;
+--general-color-code:#2d2b57;
+--general-color-link:#4c00ff;
+--general-color-hover-link:#0d8af1;}
