--- a/tokens/borders/variables-border-dark-mode.scss
+++ b/tokens/borders/variables-border-dark-mode.scss
@@ -1,5 +1,3 @@
 :root{
-
---nav-btn-border-stroke:#000 1px solid;
-
+--nav-btn-border-stroke:#fff 1px solid;
 --general-btn-border-stroke:#000 1px solid;}
