--- a/tokens/variables.css
+++ b/tokens/variables.css
@@ -1,6 +1,6 @@
 /**
  * Do not edit directly
- * Generated on Mon, 11 Sep 2023 09:13:58 GMT
+ * Generated on Tue, 12 Sep 2023 08:52:46 GMT
  */
 
 :root {
@@ -15,7 +15,7 @@
   --general-nav-btn-border-stroke: [object Object];
   --general-general-background-app: #dcdada;
   --general-general-text-color: #000;
-  --general-general-text-font: Poppins;
+  --general-general-text-font: sans-serif;
   --general-general-h1-size: 45px;
   --general-general-h2-size: 32px;
   --general-general-h3-size: 24px;
@@ -28,24 +28,15 @@
   --general-general-color-link: #4c00ff;
   --general-general-color-hover-link: #0d8af1;
   --general-icon-ui-house: fa-solid fa-house;
-  --dark-mode-nav-logo-color-dark: #fff;
-  --dark-mode-nav-menu-color-dark: #555555;
-  --dark-mode-nav-text-color-dark: #fff;
-  --dark-mode-nav-btn-hover-dark: #003fae;
-  --dark-mode-nav-hover-a-dark: #fff;
-  --dark-mode-nav-btn-color-dark: #003fae;
-  --dark-mode-nav-font-size: 20px;
-  --dark-mode-nav-btn-border-radius: 5px;
-  --dark-mode-nav-btn-border-stroke-dark: [object Object];
-  --dark-mode-general-background-app-dark: #050505;
-  --dark-mode-general-text-color-dark: #fff;
-  --dark-mode-general-text-font: Poppins;
-  --dark-mode-general-h1-size: 45px;
-  --dark-mode-general-h2-size: 32px;
-  --dark-mode-general-h3-size: 24px;
-  --dark-mode-general-text-size: 20px;
-  --dark-mode-general-h4: 20px;
-  --dark-mode-general-btn-border-radius: 5px;
+  --dark-mode-nav-logo-color: #fff;
+  --dark-mode-nav-menu-color: #555555;
+  --dark-mode-nav-text-color: #fff;
+  --dark-mode-nav-btn-hover: #003fae;
+  --dark-mode-nav-hover-a: #fff;
+  --dark-mode-nav-btn-color: #003fae;
+  --dark-mode-nav-btn-border-stroke: [object Object];
+  --dark-mode-general-background-app: #050505;
+  --dark-mode-general-text-color: #fff;
   --dark-mode-general-btn-border-stroke: [object Object];
-  --dark-mode-general-btn-color-dark: #000;
+  --dark-mode-general-btn-color: #000;
 }
