--- a/tokens/variables/variables.scss
+++ b/tokens/variables/variables.scss
@@ -1,12 +1,12 @@
 /**
  * Do not edit directly
- * Generated on Mon, 11 Sep 2023 09:13:58 GMT
+ * Generated on Tue, 12 Sep 2023 08:52:46 GMT
  */
 
 :root {
   --general-nav-font-size: 20px;
   --general-nav-btn-border-radius: 5px;
-  --general-general-text-font: Poppins;
+  --general-general-text-font: sans-serif;
   --general-general-h1-size: 45px;
   --general-general-h2-size: 32px;
   --general-general-h3-size: 24px;
@@ -14,13 +14,4 @@
   --general-general-h4: 20px;
   --general-general-btn-border-radius: 5px;
   --general-icon-ui-house: fa-solid fa-house;
-  --dark-mode-nav-font-size: 20px;
-  --dark-mode-nav-btn-border-radius: 5px;
-  --dark-mode-general-text-font: Poppins;
-  --dark-mode-general-h1-size: 45px;
-  --dark-mode-general-h2-size: 32px;
-  --dark-mode-general-h3-size: 24px;
-  --dark-mode-general-text-size: 20px;
-  --dark-mode-general-h4: 20px;
-  --dark-mode-general-btn-border-radius: 5px;
 }
