--- a/spa-nav/src/style-nav.css
+++ b/spa-nav/src/style-nav.css
@@ -1,3 +1,6 @@
+
+@import '../../spa-root/src/assets/colors/variables-general-colors.scss';
+
 * {
   margin: 0;
   padding: 0;
@@ -11,7 +14,7 @@
   left: 0;
   height: 100%;
   width: 240px;
-  background: #11101d;
+  background: var(--nav-menu-color);
   padding: 6px 14px;
   border-radius: 0  10px  10px 0px;
 }
