--- a/stencil-library/src/global/global.css
+++ b/stencil-library/src/global/global.css
@@ -1,18 +1,38 @@
-@import "../../../spa-root/src/assets/variables.css";
+
+@import "../../../tokens/icons/variables-icon.scss";
+@import "../../../tokens/borderRadius/variables-borderRadius.scss";
+@import "../../../tokens/borders/variables-border.scss";
+@import "../../../tokens/colors/variables-general-colors.scss";
+@import "../../../tokens/fontFamilies/variables-fontFamilies.scss";
+@import "../../../tokens/fontSizes/variables-fontSizes.scss";
+
+/*Dark Mode
+@import "../../../tokens/colors/variables-dark-colors.scss";
+@import "../../../tokens/borders/variables-border-dark-mode.scss";
+*/
 
 
 :root{
-    --btn-color-languaje: var(--general-nav-btn-color);
-    --btn-color-btn-nav: var(--general-nav-btn-color);
-    --logo-color: var(--general-nav-logo-color);
+    --btn-color-languaje: var(--nav-btn-color);
+    --btn-color-btn-nav: var(--nav-btn-color);
+    --logo-color: var(--nav-logo-color);
     --border-radius-btn: var(--general-nav-btn-border-radius);
-    --icon-house: var( --general-icon-ui-house);
-    --background-color-nav: var(--general-nav-menu-color);
-    --hover-color-text-a: var(--general-nav-btn-hover);
-    --hover-color-background-a: var(--general-nav-hover-a);
-    --text-color-nav: var(--general-nav-text-color);
-    --text-color-link: var( --general-general-color-link);
-    --text-color-hover-link:var(--general-general-color-hover-link);
-    --icon-house:var(--general-icon-ui-house)
+    --background-color-nav: var(--nav-menu-color);
+    --hover-color-text-a: var(--nav-btn-hover);
+    --hover-color-background-a: var(--nav-hover-a);
+    --text-color-nav: var(--nav-text-color);
+    --text-color-link: var(--general-color-link);
+    --text-color-hover-link:var(--general-color-hover-link);
+
+    /*Icon*/
+    --icon-house:var(--general-icon-ui-house);
+    --icon-info:var(--general-icon-ui-info);
+    --icon-tools:var(--general-icon-ui-tools);
+    --icon-code:var(--general-icon-ui-code);
+    --icon-file-code:var(--general-icon-ui-file-code);
+    --icon-exclamation:var(--general-icon-ui-exclamation);
+    --icon-laptop-code:var(--general-icon-ui-laptop-code);
+    --icon-adjust:var(--general-icon-ui-adjust);
+
 }
 
