--- a/tokens/variables.css
+++ b/tokens/variables.css
@@ -1,6 +1,6 @@
 /**
  * Do not edit directly
- * Generated on Tue, 12 Sep 2023 08:52:46 GMT
+ * Generated on Wed, 13 Sep 2023 10:11:54 GMT
  */
 
 :root {
@@ -28,6 +28,13 @@
   --general-general-color-link: #4c00ff;
   --general-general-color-hover-link: #0d8af1;
   --general-icon-ui-house: fa-solid fa-house;
+  --general-icon-ui-info: fa-solid fa-circle-info;
+  --general-icon-ui-tools: fa-solid fa-screwdriver-wrench;
+  --general-icon-ui-code: fa-solid fa-code;
+  --general-icon-ui-exclamation: fa-solid fa-exclamation;
+  --general-icon-ui-file-code: fa-light fa-file-code;
+  --general-icon-ui-laptop-code: fa-solid fa-laptop-code;
+  --general-icon-ui-adjust: fa-solid fa-circle-half-stroke;
   --dark-mode-nav-logo-color: #fff;
   --dark-mode-nav-menu-color: #555555;
   --dark-mode-nav-text-color: #fff;
