--- a/spa-home/src/app/app.component.html
+++ b/spa-home/src/app/app.component.html
@@ -1,19 +1,12 @@
 <div class="container">
-
-  <h1 translate> home.tittle</h1>
+  <h1 translate>home.tittle</h1>
 
   <div class="container2">
-    <p translate>
-     home.init
-    </p>
+    <p translate>home.init</p>
     <br />
 
-    <text-box
-      text="Hola"
-    ></text-box>
+    <text-box></text-box>
 
-    <p translate>
-      home.final
-    </p>
+    <p translate>home.final</p>
   </div>
 </div>
