--- a/spa-root/src/assets/variables/variables.scss
+++ b/spa-root/src/assets/variables/variables.scss
@@ -1,6 +1,6 @@
 /**
  * Do not edit directly
- * Generated on Wed, 13 Sep 2023 10:16:11 GMT
+ * Generated on Fri, 15 Sep 2023 10:57:25 GMT
  */
 
 :root {
@@ -21,4 +21,5 @@
   --general-icon-ui-file-code: fa-light fa-file-code;
   --general-icon-ui-laptop-code: fa-solid fa-laptop-code;
   --general-icon-ui-adjust: fa-solid fa-circle-half-stroke;
+  --general-icon-ui-book: fa-solid fa-book;
 }
