--- a/server-static/public/css/variables/variables.css
+++ b/server-static/public/css/variables/variables.css
@@ -1,9 +1,18 @@
 /**
  * Do not edit directly
- * Generated on Fri, 15 Sep 2023 10:57:25 GMT
+ * Generated on Tue, 19 Sep 2023 10:53:16 GMT
  */
 
 :root {
+  --general-nav-font-size: 20px;
+  --general-nav-btn-border-radius: 5px;
+  --general-general-text-font: sans-serif;
+  --general-general-h1-size: 45px;
+  --general-general-h2-size: 32px;
+  --general-general-h3-size: 24px;
+  --general-general-text-size: 20px;
+  --general-general-h4: 20px;
+  --general-general-btn-border-radius: 5px;
   --general-icon-ui-house: fa-solid fa-house;
   --general-icon-ui-info: fa-solid fa-circle-info;
   --general-icon-ui-tools: fa-solid fa-screwdriver-wrench;
