--- a/spa-web/src/app/app.component.scss
+++ b/spa-web/src/app/app.component.scss
@@ -1,8 +1,9 @@
-@import "../../../tokens/variables.scss";
-
+@import url(http://localhost:3000/css/fontFamilies/variables-fontFamilies.css);
+@import url(http://localhost:3000/css/fontSizes/variables-fontSizes.css);
 *{
     text-align: justify;
-    font-size: calc($general-general-h4);
+    font-size: calc(24px);
+    font-family: var(--general-general-text-font);
 }
 
 .hljs {
@@ -12,7 +13,7 @@
       "monospace";
     line-height: 1.45;
     padding: 1rem;
-    background: $general-general-color-code;
+    background: #2d2b57;
     font-weight: normal;
     border-radius: 0.5rem;
     margin-bottom: 15px;
@@ -25,17 +26,17 @@
 }
 
 h1{
-    font-size: $general-general-h1-size;
+    font-size: var(--general-general-h1-size);
     margin-bottom: 10px;
 }
 
 h2{
-    font-size: $general-general-h2-size;
+    font-size: 1.5rem;
     margin-bottom: 10px;
 }
 
 h3{
-    font-size: $general-general-h3-size;
+    font-size: 1.25rem;
     margin-bottom: 10px;
 }
 
