--- a/spa-library/src/app/app.component.html
+++ b/spa-library/src/app/app.component.html
@@ -1,4 +1,11 @@
 <div class="container">
-  <h1 translate>libraries</h1>
-  <app-translate-react></app-translate-react>
+  <h1 translate>libraries.tittle</h1>
+  <hr>
+  <p translate> libraries.init_text</p>
+
+  <div>
+    <h2 translate>libraries.taduccion_tittle</h2>
+    <app-translate-react></app-translate-react>
+  </div>
+  
 </div>
