--- a/spa-tools/src/app/figma/figma.component.html
+++ b/spa-tools/src/app/figma/figma.component.html
@@ -1,1 +1,6 @@
-<h1>Figma</h1>
+<h2 translate>tools.figma.tittle</h2>
+
+<div class="container-img">
+    <img src="http://localhost:3000/images/spa-tools/figma.png" alt="Figma">
+    <p translate>tools.figma.text</p>
+</div>
