--- a/spa-web/src/app/react/react.component.html
+++ b/spa-web/src/app/react/react.component.html
@@ -3,13 +3,8 @@
 <p translate>web.react.text_init</p>
 
 <p translate>web.react.text_ejecute_comand</p>
-<pre> 
-    <code [highlight]="code_create_react_microfrontend" [languages]="['bash']"  linenumbers="true"></code> 
-  </pre>
+<code [highlight]="code_create_react_microfrontend"></code>
 
 <p translate>web.react.text_finish</p>
 
-<pre> 
-  <code [highlight]="code_ejecute_react" [languages]="['bash']"  linenumbers="true"></code> 
-</pre>
-
+<code [highlight]="code_ejecute_react"></code>
