--- a/server-express/public/css/colors/variables-dark-colors.css
+++ b/server-express/public/css/colors/variables-dark-colors.css
@@ -7,4 +7,7 @@
 --nav-btn-color:#003fae;
 --general-background-app:#050505;
 --general-text-color:#fff;
---general-btn-color:#000;}
+--general-btn-color:#000;
+--general-color-code:#2d2b57;
+--general-color-hover-link:#0d8af1;
+--general-color-link:#4c00ff;}
