--- a/spa-root/src/index.ejs
+++ b/spa-root/src/index.ejs
@@ -4,11 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="icon" href="http://localhost:3000/images/icon-app.png">
   <link rel="stylesheet" href="http://localhost:3000/css/variables.css">
   <link rel="stylesheet" id="theme-colors" href="http://localhost:3000/css/colors/variables-general-colors.css">
-  <title>Microfronted-App</title>
+  <title>NTTDATA-FRONTEND</title>
   <script src="https://cdn.jsdelivr.net/npm/regenerator-runtime@0.13.7/runtime.min.js"></script>
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self' https: localhost:*; script-src 'unsafe-inline' 'unsafe-eval' https: localhost:*; connect-src https: localhost:* ws://localhost:*; style-src 'unsafe-inline' https: http://localhost:3000; object-src 'none';">
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self' https: localhost:*; script-src 'unsafe-inline' 'unsafe-eval' https: localhost:*; connect-src https: localhost:* ws://localhost:* ws://192.168.1.32:8081; style-src 'unsafe-inline' https: http://localhost:3000; object-src 'none';">
+
   <meta name="importmap-type" content="systemjs-importmap" />
  
   <script type="systemjs-importmap">
@@ -25,8 +27,8 @@
   <script type="systemjs-importmap" src="/importmap.json"></script> 
   <% } %>
 
-  <script type="module"  src='https://cdn.jsdelivr.net/npm/stencil-library-web@0.0.30/dist/stencil-library/stencil-library.esm.js'></script>
-  <link rel="stylesheet"  type="text/css""  href='https://cdn.jsdelivr.net/npm/stencil-library-web@0.0.28/dist/stencil-library/stencil-library.css'></link>
+  <script type="module"  src='https://cdn.jsdelivr.net/npm/stencil-library-web@0.0.31/dist/stencil-library/stencil-library.esm.js'></script>
+  <link rel="stylesheet"  type="text/css""  href='https://cdn.jsdelivr.net/npm/stencil-library-web@0.0.31/dist/stencil-library/stencil-library.css'></link>
   <script src="https://kit.fontawesome.com/d9bf3bb30e.js" crossorigin="anonymous"></script>
   
   <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet"></link>
