--- a/spa-tools/src/app/app.component.html
+++ b/spa-tools/src/app/app.component.html
@@ -1,5 +1,8 @@
 <div  class="container">
-  <h1 translate>tools</h1>
+  <h1 translate>tools.tittle</h1>
+  <hr>
+  <p translate>tools.text_init</p>
   <app-git-hub></app-git-hub>
   <app-figma></app-figma>
+  <app-npm></app-npm>
 </div>
