--- a/spa-tools/src/app/app.component.scss
+++ b/spa-tools/src/app/app.component.scss
@@ -1,30 +1,27 @@
-@import "../../../tokens/variables.scss";
 
 .container{
     margin-top: 40px;
-    margin-left: 280px;
+    margin-left: 300px;
     margin-right: 40px;
-    font-family: $general-general-text-font;
-
 
     p{
         text-align: justify;
-        font-size: $general-general-text-size;
+        font-size: var(--general-general-text-size);
 
     }
 
     h1{
-        font-size: $general-general-h1-size;
+        font-size:var(--general-general-h1-size);
 
     }
 
     h2{
-        font-size: $general-general-h2-size;
+        font-size:var(--general-general-h2-size);
 
     }
 
     h3{
-        font-size: $general-general-h3-size;
+        font-size: var(--general-general-h3-size);
     }
 }
 
