--- a/server-express/public/css/fontFamilies/variables-fontFamilies.css
+++ b/server-express/public/css/fontFamilies/variables-fontFamilies.css
@@ -1,8 +1,9 @@
 /**
  * Do not edit directly
- * Generated on Wed, 04 Oct 2023 10:49:59 GMT
+ * Generated on Wed, 04 Oct 2023 11:08:15 GMT
  */
 
 :root {
   --general-general-text-font: sans-serif;
+  --general-general-text-code: Courier New;
 }
