--- a/server-express/public/css/colors/variables-dark-colors.css
+++ b/server-express/public/css/colors/variables-dark-colors.css
@@ -8,6 +8,7 @@
 --general-background-app:#050505;
 --general-text-color:#fff;
 --general-btn-color:#000;
+--general-color-text-code:#fff;
 --general-color-code:#2d2b57;
 --general-color-hover-link:#0d8af1;
 --general-color-link:#4c00ff;}
