--- a/server-express/public/css/colors/variables-general-colors.css
+++ b/server-express/public/css/colors/variables-general-colors.css
@@ -10,4 +10,5 @@
 --general-btn-color:#11101d;
 --general-color-code:#2d2b57;
 --general-color-link:#4c00ff;
---general-color-hover-link:#0d8af1;}
+--general-color-hover-link:#0d8af1;
+--general-color-text-code:#fff;}
