--- a/server-express/public/css/variables/variables.css
+++ b/server-express/public/css/variables/variables.css
@@ -1,6 +1,6 @@
 /**
  * Do not edit directly
- * Generated on Wed, 04 Oct 2023 10:49:59 GMT
+ * Generated on Wed, 04 Oct 2023 11:08:15 GMT
  */
 
 :root {
@@ -13,6 +13,7 @@
   --general-general-text-size: 1.25rem;
   --general-general-h4: 1rem;
   --general-general-btn-border-radius: 5px;
+  --general-general-text-code: Courier New;
   --general-icon-ui-house: fa-solid fa-house;
   --general-icon-ui-info: fa-solid fa-circle-info;
   --general-icon-ui-tools: fa-solid fa-screwdriver-wrench;
