add stoybook stencil js

--- a/spa-library/src/app/app.component.html
+++ b/spa-library/src/app/app.component.html
@@ -6,6 +6,13 @@
   <div>
     <h2 translate>libraries.taduccion_tittle</h2>
     <app-translate-react></app-translate-react>
+    <app-translate-vue></app-translate-vue>
+    <app-translate-angular></app-translate-angular>
+  </div>
+
+  <div>
+
+    <app-style-dictionary></app-style-dictionary>
   </div>
   
 </div>
