--- a/spa-library/src/app/translate-angular/translate-angular.component.html
+++ b/spa-library/src/app/translate-angular/translate-angular.component.html
@@ -1,1 +1,27 @@
-<p>translate-angular works!</p>
+<h3 translate>libraries.angular.tittle</h3>
+<p translate>libraries.angular.text_install</p>
+<my-code text_code="{{ install_library_ngx_translate_core_angular }}" />
+<p translate>libraries.angular.text_2</p>
+<my-code text_code="{{ code_createTranslateLoader }}" />
+<p translate>libraries.angular.text_3</p>
+<my-code text_code="{{ code_translateModule }}" />
+
+<p translate>libraries.angular.text_4</p>
+<div class="container_img">
+  <img
+    class="container_img_medium"
+    src="http://localhost:3000/images/spa-library/service-i18n-angular.png"
+    alt="service"
+  />
+</div>
+
+<p translate>libraries.angular.text_5</p>
+
+
+<div class="container_img">
+    <img
+      class="container_img_small"
+      src="http://localhost:3000/images/spa-library/example-translate-angular.png"
+      alt="example-translate-angular"
+    />
+  </div>
