--- a/spa-library/src/app/translate-vue/translate-vue.component.html
+++ b/spa-library/src/app/translate-vue/translate-vue.component.html
@@ -1,1 +1,22 @@
-<p>translate-vue works!</p>
+<h3 translate>libraries.vue.tittle</h3>
+<p translate>libraries.vue.text_init</p>
+<my-code text_code="{{ install_library_i18n_vue }}" />
+
+<p translate>libraries.vue.text_2</p>
+
+<div class="container_img">
+  <img
+    class="container_img_medium"
+    src="http://localhost:3000/images/spa-library/main.js-vue.png"
+    alt="i18n"
+  />
+</div>
+<p translate>libraries.vue.text_3</p>
+
+<div class="container_img">
+  <img
+    class="container_img_small"
+    src="http://localhost:3000/images/spa-library/example-i18n-vue.png"
+    alt="example-i18n-vue"
+  />
+</div>
