--- a/spa-web/src/app/angular-info/angular-info.component.html
+++ b/spa-web/src/app/angular-info/angular-info.component.html
@@ -2,19 +2,26 @@
 
 <p translate>web.angular.text_init</p>
 
-<pre> 
-    <code [highlight]="code_create_angular_microfrontend" [languages]="['bash']"  linenumbers="true"></code> 
-  </pre>
+<my-code text_code="{{ code_create_angular_microfrontend }}"></my-code>
 
 <p translate>web.angular.text_config_main</p>
 
-<img
-  src="http://localhost:3000/images/spa-web/main.png"
-  alt="main.single-spa.ts"
-/>
+<div class="container_img">
+  <img
+    class="container_img_medium"
+    src="http://localhost:3000/images/spa-web/main.png"
+    alt="main.single-spa.ts"
+  />
+</div>
 
 <p translate>web.angular.text_route</p>
-<img
-  src="http://localhost:3000/images/spa-web/app-routing.png"
-  alt="main.single-spa.ts"
-/>
+
+
+<div class="container_img">
+  <img
+    class="container_img_medium"
+    src="http://localhost:3000/images/spa-web/app-routing.png"
+    alt="main.single-spa.ts"
+  />
+</div>
+
