--- a/spa-web/src/app/react/react.component.html
+++ b/spa-web/src/app/react/react.component.html
@@ -3,8 +3,9 @@
 <p translate>web.react.text_init</p>
 
 <p translate>web.react.text_ejecute_comand</p>
-<code [highlight]="code_create_react_microfrontend"></code>
+
+<my-code text_code="{{ code_create_react_microfrontend }}"></my-code>
 
 <p translate>web.react.text_finish</p>
 
-<code [highlight]="code_ejecute_react"></code>
+<my-code text_code="{{ code_ejecute_react }}"></my-code>
