--- a/spa-web/src/app/single-spa/single-spa.component.html
+++ b/spa-web/src/app/single-spa/single-spa.component.html
@@ -2,14 +2,10 @@
 
 <p translate>web.single_spa.init_text</p>
 
-<pre> 
-    <code [highlight]="code_installl_single_spa" [languages]="['bash']"></code> 
-  </pre>
+<my-code text_code="{{ code_installl_single_spa }}"></my-code>
 
 <p translate>web.single_spa.text_create_root</p>
 
-<pre> 
-    <code [highlight]="code_create_single_spa" [languages]="['bash']"></code> 
-  </pre>
+<my-code text_code="{{ code_create_single_spa }}"></my-code>
 
 <p translate>web.single_spa.text_finish</p>
