--- a/spa-web/src/app/stencil/stencil.component.html
+++ b/spa-web/src/app/stencil/stencil.component.html
@@ -11,31 +11,22 @@
   <li translate>web.stencil.li_third_step</li>
 </ul>
 
-<pre> 
-  <code [highlight]="code_npm_stencil_global" [languages]="['bash']"  linenumbers="true"></code> 
-</pre>
+<my-code text_code="{{ code_npm_stencil_global }}"></my-code>
 
 <p translate>web.stencil.text_create_proyect</p>
-<pre> 
-  <code [highlight]="code_npm_create_proyect_stencil" [languages]="['bash']"  linenumbers="true"></code> 
-</pre>
+
+<my-code text_code="{{ code_npm_create_proyect_stencil }}"></my-code>
 
 <p translate>web.stencil.text_create_webcomponent</p>
 
-<pre> 
-  <code [highlight]="code_create_web_component" [languages]="['bash']"  linenumbers="true"></code> 
-</pre>
+<my-code text_code="{{ code_create_web_component }}"></my-code>
 
 <p translate>web.stencil.text_ejecute_stencil</p>
 
-<pre> 
-  <code [highlight]="code_stencil_start" [languages]="['bash']"  linenumbers="true"></code> 
-</pre>
+<my-code text_code="{{ code_stencil_start }}"></my-code>
 
 <p translate>web.stencil.text_public_npm</p>
 
 <p translate>web.stencil.text_public_code_npm</p>
 
-<pre> 
-  <code [highlight]="code_npm_login" [languages]="['bash']"  linenumbers="true"></code> 
-</pre>
+<my-code text_code="{{ code_npm_login }}"></my-code>
