--- a/spa-web/src/app/vue-info/vue.component.html
+++ b/spa-web/src/app/vue-info/vue.component.html
@@ -1,30 +1,15 @@
 <h2>VUE</h2>
 
-<p translate>
-  web.vue.text_init
-</p>
+<p translate>web.vue.text_init</p>
 
-<pre> 
-    <code [highlight]="code_create_vue_microfrontend" [languages]="['bash']"  linenumbers="true"></code> 
-</pre>
+<my-code text_code="{{ code_create_vue_microfrontend }}"></my-code>
 
-<p translate>
-  web.vue.text_edit_config
-</p>
+<p translate>web.vue.text_edit_config</p>
 
-<pre> 
-  <code [highlight]="code_config_webpack" [languages]="['bash']"  linenumbers="true"></code> 
-</pre>
+<my-code text_code="{{ code_config_webpack }}"></my-code>
 
-<p translate>
-  web.vue.text_finish_edit
-</p>
+<p translate>web.vue.text_finish_edit</p>
 
-<p translate>
-  web.vue.text_ejecute_proyect
-</p>
+<p translate>web.vue.text_ejecute_proyect</p>
 
-<pre> 
-  <code [highlight]="code_ejecute_vue_app" [languages]="['bash']"  linenumbers="true"></code> 
-</pre>
-
+<my-code text_code="{{ code_ejecute_vue_app }}"></my-code>
