--- a/spa-tools/src/app/git-hub/git-hub.component.html
+++ b/spa-tools/src/app/git-hub/git-hub.component.html
@@ -1,6 +1,6 @@
 <h2 translate>tools.git_hub.tittle</h2>
 <div class="container-img">
-  <img src="http://localhost:3000/images/spa-tools/github.png" alt="GitHub" />
+  <img src="http://localhost:3000/images/spa-tools/github.png" alt="GitHub" title="GitHub" />
   <div>
     <p translate>tools.git_hub.text</p>
     <p translate >tools.git_hub.text_2  <my-link text="Repositorio" link="https://github.com/ipozuelo/microfront-single-spa"/></p>
