--- a/spa-tools/src/app/npm/npm.component.html
+++ b/spa-tools/src/app/npm/npm.component.html
@@ -1,7 +1,9 @@
-
-<h2>NPM</h2>
+<h2 translate>tools.npm.tittle</h2>
 <div class="container-img">
-    <img src="http://localhost:3000/images/spa-tools/npm.png" alt="GitHub">
-    <p translate>tools.npm.text</p>
-  
+  <img src="http://localhost:3000/images/spa-tools/npm.png" alt="NPM" title="NPM"/>
+  <p translate>tools.npm.text</p>
 </div>
+
+<p translate>tools.npm.text_2</p>
+
+<my-code text_code="{{ code_cdn }}" class="code"></my-code>
