--- a/spa-tools/src/app/npm/npm.component.scss
+++ b/spa-tools/src/app/npm/npm.component.scss
@@ -1,13 +1,13 @@
+.container-img {
+  display: flex;
 
-.container-img{
+  img {
+    margin-right: 50px;
+    max-width: 100px;
+    max-height: 100px;
+  }
+}
 
-    display: flex;
-
-
-    img{
-        margin-right: 50px;
-        max-width: 100px;
-        max-height: 100px;
-    }
-
+my-code {
+  font-size: 13px;
 }
