--- a/spa-web/src/app/app.component.html
+++ b/spa-web/src/app/app.component.html
@@ -1,16 +1,17 @@
 <div class="container">
   <h1 translate>web.tittle</h1>
-  <h2 translate> web.first</h2>
+  <hr />
+  <h2 translate>web.first</h2>
 
-  <p translate> web.start_text</p>
+  <p translate>web.start_text</p>
 
   <p translate>web.next_text</p>
 
   <app-stencil></app-stencil>
+  <app-server-express></app-server-express>
   <app-single-spa></app-single-spa>
   <root-app></root-app>
   <app-react></app-react>
   <app-angular-info></app-angular-info>
   <app-vue></app-vue>
- 
 </div>
