--- a/spa-web/src/app/app.component.scss
+++ b/spa-web/src/app/app.component.scss
@@ -3,17 +3,6 @@
     text-align: justify;
 }
 
-.hljs {
-    display: block;
-    color: var(--general-color-text);
-    font-family: "Courier New";
-    line-height: 1.45;
-    padding: 1rem;
-    background: var(--general-color-code);
-    font-weight: normal;
-    border-radius: 0.5rem;
-    margin-bottom: 15px;
-  }
 
 .container{
     margin-top: 40px;
@@ -48,7 +37,23 @@ p{
     font-size: var(--general-general-text-size);
 }
 
-img{
-    max-width: 800px;
-    max-height: 400px;
-}
+.container_img {
+    display: flex;
+    justify-content: center;
+
+
+    &_small {
+        max-width: 500px;
+        max-height: 300px;
+      }
+  
+    &_medium {
+      max-width: 700px;
+      max-height: 500px;
+    }
+  
+    &_big {
+      max-width: 1000px;
+      max-height: 500px;
+    }
+  }
