--- a/stencil-library/src/components/my-btn/my-btn.css
+++ b/stencil-library/src/components/my-btn/my-btn.css
@@ -6,6 +6,7 @@
 }
 
 button{
-  border-radius: var(--border-radius-btn);
+  border-radius: var(--border-btn-radius);
   padding: 5px 10px;
+  background-color:var(--btn-color);
 }
