--- a/stencil-library/src/components/my-link/my-link.css
+++ b/stencil-library/src/components/my-link/my-link.css
@@ -5,10 +5,10 @@
 
 
 a {
-  display: inline-block;
   color: var( --link-color);
   text-decoration: none;
-  border-radius: var(--border-radius-btn);
+  border-radius: var(--border-btn-radius);
+  padding: 1px;
   transition: background-color 0.3s;
 }
 
